--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <meta name=”description” content=”Santo Cabron!”>
 
-        <meta name=”author” content=”Udemy”>
+        <meta name=”author” content=”daveed”>
 
         <link rel=”stylesheet” href=”style.css”>
 
@@ -38,7 +38,7 @@
 
                         </nav>
 
-                        <h1>Super Duper Awesome Headline! </h1>
+                        <h1>Santo Cabron! </h1>
 
                 </header>
 
@@ -46,9 +46,9 @@
 
                         <section id=”left_column”>
 
-                                <h3>A Hitchhiker’s Guide!</h3>
+                                <h3>An art collective!</h3>
 
-                                <p>To the Galaxy!</p>
+                                <p>NYC - Miami - Santa Cruz - Los angeles</p>
 
                         </section>
 
@@ -60,7 +60,7 @@
 
 <h3>The Answer to Life?</h3>
 
-<p>Published: 30 August 2013</p>
+<p>Be happy</p>
 
                                         </header>
 
