--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                                 <h3>An art collective!</h3>
 
-                                <p>NYC - Miami - Santa Cruz - Los angeles</p>
+                                <p>Black Rock City - NYC - Miami - Santa Cruz - Los angeles</p>
 
                         </section>
 
