--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body style="color: white; background: black;">
 
         <div id=”wrapper”>
 
@@ -46,7 +46,7 @@
 
                         <section id=”left_column”>
 
-                                <h3>An art collective!</h3>
+                                <h3>Santo Cabron is a mythical creature who inspires the chaos that leads to creative expression </h3>
 
                                 <p>Black Rock City - NYC - Miami - Santa Cruz - Los angeles</p>
 
